# DataCompatMC

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  test_rules.json
src/: main.rs
src/blocks/: mod.rs
src/blocks/compare/: kinds.rs  mod.rs
src/blocks/intermediary/: collisions.rs  data.rs  metadata.rs  mod.rs  rules.rs
src/blocks/raw/: de.rs  mod.rs  property.rs
src/blocks/raw/modern/: blocks.rs  mod.rs  properties.rs
src/cmd/: info.rs  intermediary.rs  mod.rs
src/util/: file.rs  identifier.rs  mod.rs
src/util/file/: input.rs  mod.rs  output.rs
