[package]
name = "data_compat_mc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "mc-data"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
anyhow = "1.0.60"
exitcode = "1.1.2"

ahash = { version = "0.8.0", features = ["serde"] }
hashlink = { version = "0.8.0", features = ["serde_impl"] }

serde = { version = "1.0.143", features = ["derive"]}
serde_json = "1.0.83"
nom = "7.1.1"
